objects/PAN__c.object
<CustomObject>
    <fields>
        <fullName>Role_When_PAN_Created__c</fullName>
        <defaultValue>&quot;WILL BE AUTO-FILLED&quot;</defaultValue>
        <inlineHelpText>The role of the employee when the PAN was created.</inlineHelpText>
        <label>Role When PAN Created</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Department in which the employee will work within the company.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_Amount_Encrypted__c</fullName>
        <label>New Salary Amount</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Salary_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Salary Amount OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salary Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Password__c</fullName>
        <label>Salesforce Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Username__c</fullName>
        <label>Salesforce Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separate_Help__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UcDj&amp;oid=00D700000008zHZ&amp;lastMod=1352151902000&quot;, &quot;HELP&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Separate Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separate_Lookup_Help__c</fullName>
        <defaultValue>&quot;LOOKUP THE VIN EMPLOYEE TO SEPARATE IN THE FIELD BELOW&quot;</defaultValue>
        <label>Separate Lookup Help</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separation_Date_Time__c</fullName>
        <inlineHelpText>The date and time the employee will separate from VinSolutions.</inlineHelpText>
        <label>Separation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Separation_Notes__c</fullName>
        <label>Separation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seperation_Reason__c</fullName>
        <description>Reason for employee&apos;s separation from the company.
Updated 8/19/2013</description>
        <label>Separation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>I – Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Contract Not Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Divestiture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – End of Temporary Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Misconduct/Policy Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Mutual Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Staff Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I – Unsatisfactory Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Deferred Term Vested – Corp Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Dissatisfied w/Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Dissatisfied w/Type of Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Dissatisfied w/Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Failure to Return From Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Family Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Health Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Job Abandonment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Leaving Labor Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Personal Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Quit Without Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Resignation in Lieu of Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Resignation – Other Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V – Return to School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Worked_In__c</fullName>
        <description>State the employee will work in for Vinsolutions.</description>
        <inlineHelpText>State the employee will work in for Vinsolutions.</inlineHelpText>
        <label>State Worked In</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Employment status</description>
        <inlineHelpText>F/T = Full-time, P/T = Part-time, Temp = Temporary, Cons = Consultant</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>F/T</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp/Cons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Access__c</fullName>
        <description>System access needed for employee to perform required duties.</description>
        <label>System Access</label>
        <picklist>
            <picklistValues>
                <fullName>MotoSnap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Community Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinsolutions Website Picture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TRAX_Eligible__c</fullName>
        <label>TRAX Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Off_Balance__c</fullName>
        <description>Amount of Paid Time Off available to the employee.</description>
        <inlineHelpText>Updated by HR</inlineHelpText>
        <label>Time Off Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_When_PAN_Created__c</fullName>
        <defaultValue>&quot;WILL BE AUTO-FILLED&quot;</defaultValue>
        <inlineHelpText>The employee&apos;s title when the PAN was created.</inlineHelpText>
        <label>Title When PAN Created</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verbal_Offer_made_to_Candidate__c</fullName>
        <label>Verbal Offer made to Candidate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vin_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>look-up existing VinSolutions Employee to modify</inlineHelpText>
        <label>Vin Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PAN</label>
    <listViews>
        <fullName>All_PAN_Requests_HR</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Department_Change__c</columns>
        <columns>Title_Change__c</columns>
        <columns>Reporting_Change__c</columns>
        <columns>Salary_Change__c</columns>
        <columns>Non_Exempt_to_Exempt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/22/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/18/2014 12:00 AM</value>
        </filters>
        <label>All PAN Requests - HR</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>Employee_Email__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Status__c</columns>
        <columns>Role_When_PAN_Created__c</columns>
        <columns>Employee_Alias__c</columns>
        <columns>Job_Title__c</columns>
        <columns>New_Job_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Requests_HR</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Status__c</columns>
        <columns>Department_Change__c</columns>
        <columns>Title_Change__c</columns>
        <columns>Reporting_Change__c</columns>
        <columns>Salary_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/7/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/20/2013 12:00 AM</value>
        </filters>
        <label>Completed Requests - HR</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Not_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Vin_Employee__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>!Created Not Submitted</label>
    </listViews>
    <listViews>
        <fullName>Helpdesk</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_Manager__c</columns>
        <columns>Current_Department__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>IT Setup</value>
        </filters>
        <label>Helpdesk</label>
        <sharedTo>
            <role>HumanResourceManager</role>
            <role>ITSpecialist</role>
            <role>ProcessDevelopmentManager</role>
            <role>SalesforceDeveloper</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Human_Resources</fullName>
        <columns>NAME</columns>
        <columns>PAN_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>HR Approval</value>
        </filters>
        <label>Human Resources</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HumanResourceManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mark_Temp</fullName>
        <columns>Vin_Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Reporting_Change__c</columns>
        <columns>Promotion__c</columns>
        <columns>Lateral_Move__c</columns>
        <columns>Relocation__c</columns>
        <columns>Department_Change__c</columns>
        <columns>Title_Change__c</columns>
        <columns>Demotion__c</columns>
        <columns>Salary_Change__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.Modify,PAN__c.Process_Modify</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>Mark Temp</label>
        <sharedTo>
            <group>SalesforceAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_PAN_Requests</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>**My PAN Requests***</label>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Submitted_for_Approval</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Status__c</columns>
        <columns>Role_When_PAN_Created__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Not Submitted for Approval</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PAN_New</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Phone_Extension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.New,PAN__c.Process_New</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR,LAST_YEAR</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>PAN for New Employees</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PAN_NewALL</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Salary_Amount_Encrypted__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Phone_Extension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.New,PAN__c.Process_New</value>
        </filters>
        <label>PAN for New Employees-ALL</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PAN_Separate</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Vin_Employee__c</columns>
        <columns>Employee_Email__c</columns>
        <columns>Employee_Alias__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Current_Manager__c</columns>
        <columns>Salesforce_Username__c</columns>
        <columns>Applicable_Employee__c</columns>
        <columns>Seperation_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.Process_Seperation,PAN__c.Separate</value>
        </filters>
        <label>PAN for Separate</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PAN_for_Modify_Employees</fullName>
        <columns>NAME</columns>
        <columns>Vin_Employee__c</columns>
        <columns>Current_Salary__c</columns>
        <columns>Salary_Amount_Encrypted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Reports_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.Modify,PAN__c.Process_Modify</value>
        </filters>
        <label>PAN for Modify Employees</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PAN_for_Modify_Employees_HR</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Vin_Employee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Status__c</columns>
        <columns>Department_Change__c</columns>
        <columns>Title_Change__c</columns>
        <columns>Reporting_Change__c</columns>
        <columns>Salary_Change__c</columns>
        <columns>Non_Exempt_to_Exempt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PAN__c.Modify,PAN__c.Process_Modify</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/16/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2014 12:00 AM</value>
        </filters>
        <label>PAN for Modify Employees - HR</label>
        <sharedTo>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAN</pluralLabel>
    <recordTypes>
        <fullName>Job_Requisition</fullName>
        <active>true</active>
        <description>Used for establishing a position that needs to be fulfilled</description>
        <label>Job Requisition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modify</fullName>
        <active>true</active>
        <description>selected to make changes to an existing employee</description>
        <label>Modify</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>used to a request to add a new employee</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Modify</fullName>
        <active>true</active>
        <description>used after creating the Modify Request</description>
        <label>Process Modify</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_New</fullName>
        <active>true</active>
        <description>New Employee PANs are switched to this Record Type after the first approval.</description>
        <label>Process New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Seperation</fullName>
        <active>true</active>
        <description>used after the Separation request is generated</description>
        <label>Process Separation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Separate</fullName>
        <active>true</active>
        <description>employee no longer works for the company</description>
        <label>Separate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>New_Job_Title_required_if_Job_Title_true</fullName>
        <active>true</active>
        <description>You must choose a job title from the New Job Title picklist if Title Change is checked.</description>
        <errorConditionFormula>Title_Change__c = true &amp;&amp;  ISBLANK(TEXT(New_Job_Title__c ))</errorConditionFormula>
        <errorMessage>If Title Change is checked New Job Title picklist must not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Items_to_Change_Checked</fullName>
        <active>true</active>
        <errorConditionFormula>Promotion__c = FALSE &amp;&amp;
Lateral_Move__c = FALSE &amp;&amp;
Relocation__c = FALSE &amp;&amp;
Department_Change__c = FALSE &amp;&amp;
Title_Change__c = FALSE &amp;&amp;
Demotion__c = FALSE &amp;&amp;
Reporting_Change__c = FALSE &amp;&amp;
Salary_Change__c = FALSE &amp;&amp;
Commission_to_Non_Commission__c = FALSE &amp;&amp;
Non_Commission_to_Commission__c = FALSE &amp;&amp;
Exempt_to_Non_Exempt__c = FALSE &amp;&amp;
Non_Exempt_to_Exempt__c = FALSE &amp;&amp;
Bonus__c = FALSE &amp;&amp;
Location_Code__c = FALSE &amp;&amp;
OR(
   RecordTypeId = &quot;01270000000Q7hf&quot;,
   RecordTypeId = &quot;01270000000Q7hh&quot;
)</errorConditionFormula>
        <errorMessage>You must choose at least one of the Items to Change and check it as true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_ReportingOnly_PANs</fullName>
        <active>false</active>
        <description>Prevents modify PANs that are Reporting Change only.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; 
Reporting_Change__c = TRUE &amp;&amp;
Promotion__c = FALSE &amp;&amp;
Lateral_Move__c = FALSE &amp;&amp;
Relocation__c = FALSE &amp;&amp;
Department_Change__c = FALSE &amp;&amp;
Title_Change__c = FALSE &amp;&amp;
Demotion__c = FALSE &amp;&amp;
Salary_Change__c = FALSE &amp;&amp;
Bonus__c = FALSE &amp;&amp;
Commission_to_Non_Commission__c = FALSE &amp;&amp;
Non_Commission_to_Commission__c = FALSE &amp;&amp;
Exempt_to_Non_Exempt__c = FALSE &amp;&amp;
Non_Exempt_to_Exempt__c = FALSE</errorConditionFormula>
        <errorMessage>You do not need to submit a PAN for change that is only a Reporting Change. Please submit the change to Mark Ross via email. If you have more than 5, please submit them in the form of a CSV.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_New_Job_Title</fullName>
        <active>true</active>
        <description>If other is selected from picklist then Other New Job Title must not be blank.</description>
        <errorConditionFormula>AND( ISPICKVAL(New_Job_Title__c , &quot;Other&quot;) , Other_New_Job_Title__c  = &quot;&quot;)</errorConditionFormula>
        <errorMessage>If you are selecting Other from the picklist the Other New Job Title text field cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_New_Job_Title2</fullName>
        <active>true</active>
        <description>You cannot type anything in the Other New Job Title field unless Other is chosen from the New Job Title picklist.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(New_Job_Title__c, &quot;Other&quot;)), NOT(Other_New_Job_Title__c = &quot;&quot;))</errorConditionFormula>
        <errorMessage>You cannot type anything in the Other New Job Title field unless Other is chosen from the New Job Title picklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_on_Commission_to_Non_Commission</fullName>
        <active>false</active>
        <description>If checkbox &quot;Commission to Non Commission&quot; = True: &quot;Commission Eligible&quot; must be updated.</description>
        <errorConditionFormula>AND( Commission_to_Non_Commission__c = TRUE, 
Commission_Eligible__c = TRUE)</errorConditionFormula>
        <errorMessage>You must update the &quot;Commission Eligible&quot; field with the employee&apos;s new eligibility.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_on_Demotion</fullName>
        <active>true</active>
        <description>If checkbox &quot;Demotion&quot; = True: &quot;New Job Title&quot; and &quot;Role&quot; must be updated.</description>
        <errorConditionFormula>AND(Demotion__c = TRUE,
OR(
ISBLANK(TEXT(New_Job_Title__c ))
))</errorConditionFormula>
        <errorMessage>You must update the &quot;New Job Title&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_on_Department_Change</fullName>
        <active>true</active>
        <description>If checkbox &quot;Department Change&quot; = True: &quot;Department&quot; must be updated.</description>
        <errorConditionFormula>IF(  Department_Change__c   = True &amp;&amp;  
ISPICKVAL( Department__c  , &quot;&quot;), True, false)</errorConditionFormula>
        <errorMessage>You must update the&quot; Department&quot; field with the employee&apos;s new department.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_on_Lateral_Move</fullName>
        <active>true</active>
        <description>If checkbox &quot;Lateral Move&quot; = True: &quot;Department&quot;, &quot;New Job Title&quot;, &quot;Reports To&quot; and &quot;Role&quot; fields must be updated.</description>
        <errorConditionFormula>AND(
   Lateral_Move__c = TRUE,
   Department_Change__c = FALSE,
   Salary_Change__c = FALSE,
   Title_Change__c = FALSE,
   Reporting_Change__c = FALSE
)</errorConditionFormula>
        <errorMessage>A Lateral Move also usually entails a Title Change, Department Change, or Reporting Change. Please select all that are appropriate.</errorMessage>
    </validationRules>
</CustomObject>